--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -12,7 +12,7 @@ loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRat
 useCurrentCartPose : true # Avoid jerky movement, should always be true
 useQuaternions     : false
 useNullspacePose   : false
-useDigitalFilter   : true
+useDigitalFilter   : true # Note: the NAC only uses a simple lowpass filter
 
 publishRTtopics    : false
 
@@ -23,7 +23,7 @@ mannequinThresRot  : 0.05 # not used
 #############################
 # F/T sensors               #
 #############################
-
+# Note: set to false for Gazebo simulations
 forceTorqueOn      : true
 accelerometerOn    : true
 
@@ -31,7 +31,7 @@ accelerometerOn    : true
 gripper_acc_tip: l_gripper_motor_accelerometer_link
 ft_frame_id: l_force_torque_link #l_gripper_tool_frame
 
-# This makes zero any force less than below
+# This makes zero any force less than below (not used)
 forceCutOffX          : 0.1
 forceCutOffY          : 0.1
 forceCutOffZ          : 0.1
@@ -53,93 +53,6 @@ sensor_3 : [0,-1,0]
 max_calibration_distance: 0.2
 
 #############################
-# Reference trajectory      #
-#############################
-
-executeCircleTraj  : false
-numCircleTraj      : 3
-circleRate         : 0.5   # angular velocity in rad/sec (v = r*w = A*w)
-circleLlim         : 0.0   # amplitude = (circleUlim - circleLlim)/2
-circleUlim         : 0.8   #  = A/2
-
-#############################
-# Outer loop                #
-#############################
-
-useOuterloop       : false
-# Only one can be true
-useARMAmodel       : false
-useCTARMAmodel     : false
-useFIRmodel        : false
-useMRACmodel       : false
-useIRLmodel        : false
-useMSDmodel        : false
-useDirectmodel     : false
-
-outerLoop_time     : 0.0
-
-#### Digital filter coefficients
-## Lowpass, 1st order butterworth
-# fc=100Hz, fs=1000Hz
-#a_filt: [1.0, -0.5095]
-#b_filt: [0.7548, -0.7548]
-## Lowpass, 1st order butterworth
-# fc=1000Hz, fs=3000Hz
-#a_filt: [1.0, 0.2679]
-#b_filt: [0.634, 0.634]
-# fc=35Hz, fs=1000Hz
-#a_filt: [1.0, -0.8012]
-#b_filt: [0.0994, 0.0994]
-## Band-pass, 1st order chebychev
-# 5-1000Hz, fs=3000Hz
-#a_filt: [1.0,-0.3329,-0.6610]
-#b_filt: [0.8305, 0, -0.8305]
-# 5-100Hz, fs=1000Hz
-#a_filt: [1.0,-1.0526,0.0634]
-#b_filt: [0.4683, 0, -0.4683]
-
-a_filt: [1.0, -0.4899]
-b_filt: [0.2551, 0.2551]
-
-# Filter for F/T values
-ft_filter : 0.10
-
-# Filter for qdot values
-joint_vel_filter : 0.10
-
-# Is the reference trajectory x_r or q_r set externally or estimated
-# If externalRefTraj is false the human intent x_i is used
-# i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : false
-
-# Human intent estimation
-useHumanIntent     : false
-intentEst_time     : 0.05
-intentEst_delT     : 0.1  # Propagation time
-intentEst_M        : 100.0  # M_i the mass of the intent admittance model
-
-# Specifically for MRAC
-useSimHuman        : false
-# Params for MRAC Sim Human
-simHuman_a            : 0.1
-simHuman_b            : 2.6
-
-# Params for the MSD outer-loop controller
-m_M                   : 1.0
-m_S                   : 0.0
-m_D                   : 5.0
-
-# Params for M(s) of the RLS models
-task_mA               : 0.7
-task_mB               : 0.7
-
-# The params of the RLS estimator
-rls_lambda         : 0.98
-rls_sigma          : 0.001
-
-fixedFilterWeights : false
-
-#############################
 # Robot Pose                #
 #############################
 
@@ -154,8 +67,70 @@ cartIniPitch         :  0.0
 cartIniYaw           :  0.0
 
 #############################
+# Outer loop                #
+#############################
+
+useOuterloop       : false
+# Only one can be true
+useARMAmodel       : false
+useCTARMAmodel     : false # Removed
+useFIRmodel        : false # Removed
+useMRACmodel       : false # Removed
+useIRLmodel        : false # Removed
+useMSDmodel        : false # Removed
+useDirectmodel     : false # Removed
+
+outerLoop_time     : 0.0
+
+#############################
+# Filtering                 #
+#############################
+
+#### Digital filter coefficients
+## Lowpass, 1st order butterworth
+# fc=100Hz, fs=1000Hz
+#a_filt: [1.0, -0.5095]
+#b_filt: [0.7548, -0.7548]
+## Lowpass, 1st order butterworth
+# fc=1000Hz, fs=3000Hz
+#a_filt: [1.0, 0.2679]
+#b_filt: [0.634, 0.634]
+# fc=35Hz, fs=1000Hz
+a_filt: [1.0, -0.8012]
+b_filt: [0.0994, 0.0994]
+
+## Band-pass, 1st order chebychev
+# 5-1000Hz, fs=3000Hz
+#a_filt: [1.0,-0.3329,-0.6610]
+#b_filt: [0.8305, 0, -0.8305]
+# 5-100Hz, fs=1000Hz
+#a_filt: [1.0,-1.0526,0.0634]
+#b_filt: [0.4683, 0, -0.4683]
+
+# Filter for F/T values
+ft_filter : 0.10
+
+# Filter for qdot values
+joint_vel_filter : 0.10
+
+#############################
+# Reference trajectory      #
+#############################
+
+executeCircleTraj  : false
+numCircleTraj      : 3
+circleRate         : 0.5   # angular velocity in rad/sec (v = r*w = A*w)
+circleLlim         : 0.0   # amplitude = (circleUlim - circleLlim)/2
+circleUlim         : 0.8   #  = A/2
+
+# Subscribes to a reference trajectory topic
+# Note: set to false if human intent is used
+externalRefTraj    : false
+
+#############################
 # NN estimator              #
 #############################
+# Estimate human intent trajectory from force and position values
 computeHumanIntentNN : true
 useHumanIntentNN     : true
 nne_useLimits: true
@@ -174,7 +149,6 @@ nne_G     : [1,1,1, 1,1,1, 1,1,1, 1]
 nne_H     : [1,1,1, 1,1,1, 1,1,1, 1]
 nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05]
 nne_Pmax  : [50,50,50,50,50,50]
-
 
 #############################
 # NN controller             #
@@ -210,6 +184,37 @@ nn_feedForwardForce   : 0.0    # small because of jitter from FT measurments
 nn_nnF                : 10   # -> W (outer) smaller than G?
 nn_nnG                : 10    # -> V (inner)
 nn_ON                 : 1
+
+#############################
+# Outer loop (deprecated)   #
+#############################
+
+# Human intent estimation
+useHumanIntent     : false
+intentEst_time     : 0.05
+intentEst_delT     : 0.1  # Propagation time
+intentEst_M        : 100.0  # M_i the mass of the intent admittance model
+
+# Specifically for MRAC
+useSimHuman        : false
+# Params for MRAC Sim Human
+simHuman_a            : 0.1
+simHuman_b            : 2.6
+
+# Params for the MSD outer-loop controller
+m_M                   : 1.0
+m_S                   : 0.0
+m_D                   : 5.0
+
+# Params for M(s) of the RLS models
+task_mA               : 0.7
+task_mB               : 0.7
+
+# The params of the RLS estimator
+rls_lambda         : 0.98
+rls_sigma          : 0.001
+
+fixedFilterWeights : false
 
 #############################
 # Controller plugins        #
