--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -108,10 +108,10 @@ b_filt: [0.0994, 0.0994]
 #b_filt: [0.4683, 0, -0.4683]
 
 # Filter for F/T values
-ft_filter : 0.10
+ft_filter : 0.05
 
 # Filter for qdot values
-joint_vel_filter : 0.10
+joint_vel_filter : 0.05
 
 #############################
 # Reference trajectory      #
@@ -125,14 +125,14 @@ circleUlim         : 0.8   #  = A/2
 
 # Subscribes to a reference trajectory topic
 # Note: set to false if human intent is used
-externalRefTraj    : false
+externalRefTraj    : true
 
 #############################
 # NN estimator              #
 #############################
 # Estimate human intent trajectory from force and position values
-computeHumanIntentNN : true
-useHumanIntentNN     : true
+computeHumanIntentNN : false
+useHumanIntentNN     : false
 nne_useLimits: true
 nne_kappa : 0.01
 nne_alpha : 1.0
@@ -154,7 +154,7 @@ nne_Pmax  : [50,50,50,50,50,50]
 # NN controller             #
 #############################
 
-nn_usePED : false
+nn_usePED : true
 nnNum_Hidden          : 15
 nnNum_Joints          : 7  # DOF
 
