Testing NN estimator in 2D.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -144,11 +144,17 @@ nne_pose_filter : 0.01
 #nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05]
 #nne_Pmax  : [50,50,50,50,50,50,50,50,50,50,50,50]
 
-nne_Dim: 3
-nne_G     : [1,1,1, 1,1,1, 1,1,1, 1]
-nne_H     : [1,1,1, 1,1,1, 1,1,1, 1]
-nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05]
-nne_Pmax  : [50,50,50,50,50,50]
+#nne_Dim: 3
+#nne_G     : [1,1,1, 1,1,1, 1,1,1, 1]
+#nne_H     : [1,1,1, 1,1,1, 1,1,1, 1]
+#nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05]
+#nne_Pmax  : [50,50,50,50,50,50]
+
+nne_Dim: 2
+nne_G     : [1,1, 1,1, 1,1, 1]
+nne_H     : [1,1, 1,1, 1,1, 1]
+nne_Pmin  : [0.05,0.05,0.05,0.05]
+nne_Pmax  : [50,50,50,50]
 
 #############################
 # NN controller             #
