Scaling parameters for human force in NAC.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -36,6 +36,9 @@ forceCutOffX          : 0.1
 forceCutOffY          : 0.1
 forceCutOffZ          : 0.1
 
+useForceScaling: true
+forceScaling : [1.0,1.0,1.0,1.0,1.0,1.0]
+
 #############################
 # Flexiforce settings       #
 #############################
