--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -75,8 +75,8 @@ cartIniYaw           :  0.0
 
 useOuterloop       : false
 # Only one can be true
-useARMAmodel       : false
-tuneARMA           : true
+useARMAmodel       : true
+tuneARMA           : false
 useCTARMAmodel     : false # Removed
 useFIRmodel        : false # Removed
 useMRACmodel       : false # Removed
@@ -86,10 +86,10 @@ useDirectmodel     : false # Removed
 
 outerLoop_time     : 0.0
 
-#weightsARMA_X: [-1.1289, 0.3429, -0.1885, -0.0260, -0.0066, 0.1066, -0.1824, 0.0823]
-#weightsARMA_Y: [-1.3067, 0.4668, -0.3020, 0.1421, 0.0208, 0.0038, -0.0465, 0.0215]
-weightsARMA_X: [-0.1, 0.1, -0.1, 0.1, 0.01, 0.01, -0.01, 0.01]
-weightsARMA_Y: [-0.1, 0.1, -0.1, 0.1, 0.01, 0.01, -0.01, 0.01]
+
+weightsARMA_X: [-0.7639, -0.0554, 0.0017, -0.1824, -0.0698, 0.2235, -0.2590, 0.1051]
+weightsARMA_Y: [-0.8250, -0.0920, -0.0065, -0.0776, -0.0001, 0.0091, -0.0233, 0.0141]
+
 
 #############################
 # Filtering                 #
@@ -195,7 +195,7 @@ nn_lambda             : [2,2,2,2,2,2]
 #nn_Kv                 : [1]
 #nn_lambda             : [10]
 
-nn_usePED : false
+nn_usePED : true
 nn_Kd                 : [20,20,20,20,20,20]
 nn_Dd                 : [10,10,10,10,10,10]
 
