NAC experiments July 18, (PED=off, REF=hie).

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -75,7 +75,7 @@ cartIniYaw           :  0.0
 
 useOuterloop       : false
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 tuneARMA           : false
 useCTARMAmodel     : false # Removed
 useFIRmodel        : false # Removed
@@ -140,10 +140,10 @@ externalRefTraj    : false
 # NN estimator              #
 #############################
 # Estimate human intent trajectory from force and position values
-computeHumanIntentNN : false
-useHumanIntentNN     : false
+computeHumanIntentNN : true
+useHumanIntentNN     : true
 nne_kappa : 0.01
-nne_alpha : 0.5
+nne_alpha : 1.0
 nne_pose_filter : 1.0
 
 nne_useLimits: true
@@ -167,7 +167,7 @@ nne_useLimits_err: true
 nne_Dim: 2
 #nne_G     : [0.100,0.100, 0.050,0.050, 0.010,0.010, 1] # V -> xhat
 #nne_H     : [0.005,0.005,0.005, 0.005,0.005,0.005, 1] # U -> Phat
-nne_G     : [1,1, 1,1, 1,1, 1] # V -> xhat
+nne_G     : [1.0,1.0, 1.0,1.0, 1.0,1.0, 1.0] # V -> xhat
 nne_H     : [0.1,0.1, 0.1,0.1, 0.1,0.1, 0.1] # U -> Phat
 
 #############################
@@ -195,7 +195,7 @@ nn_lambda             : [2,2,2,2,2,2]
 #nn_Kv                 : [1]
 #nn_lambda             : [10]
 
-nn_usePED : true
+nn_usePED : false
 nn_Kd                 : [20,20,20,20,20,20]
 nn_Dd                 : [10,10,10,10,10,10]
 
